--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "opentok-react-native",
-  "version": "0.12.2",
+  "version": "0.12.1",
   "description": "React Native components for OpenTok iOS and Android SDKs",
   "main": "src/index.js",
-  "homepage": "https://www.tokbox.com",
+  "homepage": "www.tokbox.com",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
